# proveditor_infra_service

./: .env  Cargo.toml  Dockerfile  diesel.toml
helm-chart/: values.yaml
helm-chart/templates/: deployment.yaml
migrations/2023-11-23-131243_create_infra/: down.sql  up.sql
migrations/2023-12-18-200955_create_infra/: up.sql
src/: auth.rs  controller.rs  ctx.rs  error.rs  main.rs  model.rs  repository.rs  schema.rs  service.rs
src/auth/: mod.rs  mw_require_auth.rs  routes.rs
tests/: endpoint_tests.rs
