[package]
name = "proveditor-infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.18.2", features = ["full"] }
diesel = { version = "2.1.4", features = ["postgres"] }
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.4.4", features = ["fs", "cors"] }
tower-cookies = "0.9"
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "1.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "1.0.0", features = ["axum"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.7"

[[bin]]
name = "proveditor-infrastructure"
path = "src/main.rs"