[package]
name = "proveditor-infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
tokio = { version = "1.18.2", features = ["full"] }
diesel = { version = "2.1.4", features = ["postgres"] }
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
tower-cookies = "0.10"
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }
utoipa-redoc = { version = "2.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "2.0.0", features = ["axum"] }
lazy-regex = "2"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.7"

[[bin]]
name = "proveditor-infrastructure"
path = "src/main.rs"